2004-03-30  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (pthread::init_mainthread): Add parameter forked.  Set
	forked default to false..
	* thread.cc (MTinterface::fixup_after_fork): Call
	pthread::init_mainthread with forked = true.
	(pthread::init_mainthread): Add parameter forked.  Do not change thread
	self pointer when forked.

2004-03-30  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (shmat): If shmid is unknown, call a special variation
	of shmget to retrieve the shared memory segment from Cygserver
	instead of failing immediately.
	* include/cygwin/ipc.h (IPC_KEY_IS_SHMID): New internal flag for 
	shmget when called from shmat.

2004-03-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_socket): Add has_been_closed member.
	* fhandler_socket.cc (fhandler_socket::fhandler_socket): Initialize
	has_been_closed to 0.
	(fhandler_socket::recvfrom): Use new asynchronous I/O driven
	wsock_event methods.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	* net.cc (wsock_event::prepare): Reimplement using asynchronous I/O.
	(wsock_event::wait): Ditto.
	(wsock_event::release): New method.
	* wsock_event.h (class wsock_event): Remove ovr member.  Accomodate
	new implementation of prepare and wait methods.  Add release method.

2004-03-29  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.cc (pthread::atforkprepare): Call
	MT_INTERFACE->fixup_before_fork at the end of atforkprepare.

2004-03-29  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (wsock_event::wait): Change scope of local "len" variable.

2004-03-28  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (shmat): Return (void *) -1 on error instead of NULL.

2004-03-27  Christopher Faylor  <cgf@redhat.com>

	* fhandler_nodevice.cc (fhandler_nodevice::open): Assume that errno has
	already been set if pc.error is nonzero.

2004-03-26  Christopher Faylor  <cgf@redhat.com>
